refactor : 당첨된 로또 숫자 개수 판별 테스트 변경